--- a/SupportVectorRegression/support_vector_regression.ipynb
+++ b/SupportVectorRegression/support_vector_regression.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0f7f1b54",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "715cfe91",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "data_path = Path(r'/media/abdillah-ally/Salim/machine_learning/PolynomialLinearRegression/Position_Salaries.csv')\n",
+    "data_path = Path(r'c:\\Users\\ADMIN\\Documents\\MachineLearning\\PolynomialLinearRegression\\Position_Salaries.csv')\n",
     "dataset = pd.read_csv(data_path)\n",
     "X = dataset.iloc[:, 1:-1].values\n",
     "y = dataset.iloc[:, -1].values\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "81c7b5b7",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "529ce471",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "68673490",
    "metadata": {},
    "outputs": [],
@@ -1026,7 +1026,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
